# big_example

./: .gitignore  CMakeLists.txt  README.md  build.sh
.devcontainer/: Dockerfile  devcontainer.json
api-spec/: extracted_cpp_openapi.json
cpp_openapi_with_oat/examples/: example1.cpp
cpp_openapi_with_oat/http/simple/: index.html
cpp_web_service/api-spec/: howto.txt
cpp_web_service/cpp_openapi_with_oat/src/big_example/: version.h
cpp_web_service/py_test_for_cpp_openapi/big-example-demo-client/big_example_demo_client/: __init__.py
cpp_web_service/py_test_for_cpp_openapi/big-example-demo-client/big_example_demo_client/models/: my_dto.py
cpp_web_service/py_test_for_cpp_openapi/big-example-demo-client/test/: cpp_test.py
cpp_web_service/ts_test_for_cpp_openapi/: jest.config.json  package-lock.json
cpp_web_service/ts_test_for_cpp_openapi/src/generated-sources/openapi/.openapi-generator/: FILES
cpp_websocket/cpp_msgpack/: CMakeLists.txt
cpp_websocket/cpp_msgpack/examples/: Websockets.cpp  msgpack.cpp  nlohmann.cpp
cpp_websocket/ts-partner-manual/: demo.ts  package-lock.json  package.json  runme_while_Websockets_is_runnig.sh
examples/: App.cpp
oat_test/: MyControllerTest.cpp
py_manual_request/: test_api.py
py_test_for_cpp_openapi/: update_api.sh
py_test_for_cpp_openapi/big-example-demo-client/: README.md  pyproject.toml
py_test_for_cpp_openapi/big-example-demo-client/big_example_demo_client/api/demo/: get_data.py  update_data.py
py_test_for_cpp_openapi/big-example-demo-client/big_example_demo_client/models/: __init__.py
src/big_example/: AppComponent.hpp
src/big_example/controller/: MyController.hpp
src/big_example/dto/: DTOs.hpp
test/: main.cpp
ts_test_for_cpp_openapi/: package-lock.json  package.json  tsconfig.json
ts_test_for_cpp_openapi/src/: index.ts
ts_test_for_cpp_openapi/src/core/: OpenAPI.ts
ts_test_for_cpp_openapi/src/generated-sources/openapi/model/: models.ts
ts_test_for_cpp_openapi/src/models/: MyDto.ts
ts_test_for_cpp_openapi/src/schemas/: $MyDto.ts
ts_test_for_cpp_openapi/src/services/: DemoService.ts
ts_test_for_cpp_openapi/test/: cpp.test.ts
(+3 files in other folders)
